# textyle

./: Cargo.toml  README.md
src/: canvas.rs  lib.rs  main.rs
src/animation/: mod.rs
src/continuous/: canvas.rs  color.rs  mod.rs
src/continuous/layout/: alignment.rs  geometry.rs  mod.rs  sizing.rs
src/discreet/: canvas.rs  mod.rs
src/discreet/animation/: mod.rs
src/discreet/layout/: mod.rs
src/layout/: geometry.rs  mod.rs  sizing.rs
src/rendering/: mod.rs
