[package]
name = "textyle"
version = "0.1.0"
edition = "2021"
description = "A text-based declarative UI library inspired by SwiftUI"
authors = ["louis1001 <contact@louis1001.dev>"]

readme = "README.md"
homepage = "https://github.com/louis1001/textyle"
repository = "https://github.com/louis1001/textyle"

license = "MIT"

categories = ["command-line-interface", "gui", "graphics", "rendering::engine", "visualization"]

exclude = [
    "**/main.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
unicode-segmentation = "1.10.1"
anyhow = "1.0.79"
defer-lite = "1.0.0"
rand = "0.8.5"